--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             font-size: 2.5em;
             margin: 0;
         }
-    p {
+    p1 {
+            color: #555;
+            font-size: 1.2em;
+        }
+    p2 {
             color: #555;
             font-size: 1.2em;
         }
