--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </header>
 
   <main>
-    <p1>Welcome to the page of Torin Hooge</p1>
+    <p1>Welcome to the page of Torin Hooge.</p1>
     <p2>Currently, I am a mathematics masters student at UAF as well as the TA for Calculus 3</p2>
   </main>
   <footer>
