--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
             font-size: 2.5em;
             margin: 0;
         }
-    p1 {
+    p {
             color: #555;
             font-size: 1.2em;
+            display: block;
         }
-    p2 {
-            color: #555;
-            font-size: 1.2em;
         }
     footer {
             background-color: #333;
