--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
             font-size: 2.5em;
             margin: 0;
         }
-    p {
+    p1 {
             color: #555;
             font-size: 1.2em;
             display: block;
+            margin: 1em 0;
         }
+     p2 {  color: #555;
+            font-size: 1.2em;
+            display: block;
+            margin: 1em 0;
         }
     footer {
             background-color: #333;
@@ -44,7 +49,7 @@
 
   <main>
     <p1>Welcome to the page of Torin Hooge.</p1>
-    <p2>Currently, I am a mathematics masters student at UAF as well as the TA for Calculus 3</p2>
+    <p2>Currently, I'm a mathematics masters student at UAF as well as the TA for Calculus 3</p2>
   </main>
   <footer>
     <p>Created by Me &copy; 2024</p>
