--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </header>
 
   <main>
-    <p1>Welcome to the page of Torin Hooge.</p1>
-    <p2>Currently, I am a mathematics masters student at UAF as well as the TA for Calculus 3</p2>
+    <p>Welcome to the page of Torin Hooge.</p>
+    <p>Currently, I am a mathematics masters student at UAF as well as the TA for Calculus 3.</p>
   </main>
   <footer>
     <p>Created by Me &copy; 2024</p>
