--- a/index.html
+++ b/index.html
@@ -4,38 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Torin Hooge's Website </title>
-  <style>
-    body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-    header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-        }
-     h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-    p {
-            color: #555;
-            font-size: 1.2em;
-            display: block;
-            margin: 1em 0;
-        }
-    footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-  </style>
+  <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
   <header>
