--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <main>
     <p>Welcome to the page of Torin Hooge.</p>
     <p>Currently, I am a mathematics masters student at UAF as well as the TA for Calculus 3.</p>
+     <p> For my mountaineering exploits click <a href="https://www.peakbagger.com/climber/climber.aspx?cid=35480">here. </a>
+     </p>
   </main>
   <footer>
     <p>Created by Me &copy; 2024</p>
