--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </header>
 
   <main>
+   <img src="images/profile.jpg" alt="Profile Picture" style="float: left; margin-right: 10px;">
     <p>Welcome to the page of Torin Hooge.</p>
     <p>Currently, I am a mathematics masters student at UAF as well as the TA for Calculus 3.</p>
      <p> For my mountaineering exploits click <a href="https://www.peakbagger.com/climber/climber.aspx?cid=35480">here. </a>
